lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__decode_reasoning_and_function_call_items.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "id": "resp_test",
  "model": "gpt-test",
  "provider": "openai",
  "message": {
    "role": "assistant",
    "content": [
      {
        "kind": "openai_reasoning",
        "data": {
          "type": "reasoning",
          "id": "rs_1",
          "summary": [
            {
              "type": "summary_text",
              "text": "Searching."
            }
          ]
        }
      },
      {
        "kind": "tool_call",
        "data": {
          "id": "call_abc",
          "name": "search",
          "type": "function",
          "arguments": {
            "query": "foo"
          },
          "raw_arguments": "{\"query\":\"foo\"}",
          "provider_metadata": {
            "id": "fc_123"
          }
        }
      }
    ],
    "name": null,
    "tool_call_id": null
  },
  "finish_reason": "tool_calls",
  "usage": {
    "input_tokens": 30,
    "output_tokens": 12,
    "reasoning_tokens": 0,
    "cache_read_tokens": 0,
    "cache_write_tokens": 0
  },
  "raw": {
    "id": "resp_test",
    "object": "response",
    "model": "gpt-test",
    "status": "completed",
    "output": [
      {
        "type": "reasoning",
        "id": "rs_1",
        "summary": [
          {
            "type": "summary_text",
            "text": "Searching."
          }
        ]
      },
      {
        "type": "function_call",
        "id": "fc_123",
        "call_id": "call_abc",
        "name": "search",
        "arguments": "{\"query\":\"foo\"}"
      }
    ],
    "usage": {
      "input_tokens": 30,
      "output_tokens": 12
    }
  },
  "warnings": [],
  "rate_limit": null
}
